# DataMiningProject

./: CMakeLists.txt
config/: CMakeLists.txt  DataConfig.h  DataConfig.h.in
core/: CMakeLists.txt
core/alignments/: Alignment.h  AlignmentRegistration.cpp  AlignmentRegistration.h  BamAlignmentReader.cpp  BamAlignmentReader.h  IAlignment.h  IAlignmentReader.h
core/containers/: IKmerSet.h  KmerHash.hpp  KmerSet.hpp  KmerSetManager.hpp  MintomicKmerSet.hpp  SparseKmerSet.hpp
core/hashers/: KmerLookup.cpp  KmerLookup.h  PartialHash.hpp
core/parsers/: AlignmentParser.hpp
core/utils/: Noncopyable.hpp  Parameters.cpp  Parameters.h  ResultsPrinter.hpp  ThreadPool.hpp  Types.h
tests/: AlignmentParserTests.hpp  BamAlignmentReaderTests.hpp  CMakeLists.txt  gtest_main.cpp
tools/: .CMakeLists.txt.swp  CMakeLists.txt  dmp.cpp
